--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -1,4 +1,4 @@
-# syntax=docker/dockerfile:1
+# docker/Dockerfile.worker
 FROM python:3.12-slim
 
 WORKDIR /app
@@ -15,15 +15,9 @@ RUN adduser --disabled-password --gecos '' appuser
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
-
+COPY . /app
 RUN chown -R appuser:appuser /app
 
 USER appuser
 
-EXPOSE 8000 5555
-
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
-
-CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1"]
+CMD ["celery", "-A", "app.core.celery_app", "worker", "--loglevel=info", "--concurrency=2"]
