--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.9.0
 autopep8==2.3.2
+billiard==4.2.1
 CacheControl==0.14.3
 cachetools==5.5.2
+celery==5.5.3
 certifi==2025.7.9
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 cryptography==45.0.5
 fastapi==0.116.0
 firebase-admin==6.9.0
+flower==2.0.1
 google-api-core==2.25.1
 google-api-python-client==2.176.0
 google-auth==2.40.3
@@ -28,10 +35,15 @@ hpack==4.1.0
 httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
+humanize==4.12.3
 hyperframe==6.1.0
 idna==3.10
+kombu==5.5.4
 msgpack==1.1.1
+packaging==25.0
 pillow==11.3.0
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
 proto-plus==1.26.1
 protobuf==6.31.1
 pyasn1==0.6.1
@@ -43,14 +55,22 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 PyJWT==2.10.1
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
+redis==6.4.0
 requests==2.32.4
 rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
+tornado==6.5.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
+vine==5.1.0
+wcwidth==0.2.13
